# Slate

./: README.md  _additions.scss  _colors.scss  _common.scss  _drawing.scss  gtk-contained-dark.scss  gtk-contained.scss  meson.build
Slate/: index.theme
Slate-dark/: index.theme
Slate-dark/gtk-3.0/: gtk.css
Slate/gtk-3.0/: gtk-dark.css  gtk.css
